--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,17 @@
 /* 
     GENERAL
 */
+
+.square{
+    width: 10%;
+    height: 10%;
+    border: 2px solid black;
+    background-color: gold;
+    text-align: center;
+    line-height: 100px;
+}
+
+.active{
+    border: 2px solid lightcoral;
+    background-color: green;
+}
